--- a/Chrome Extension/popup.html
+++ b/Chrome Extension/popup.html
@@ -11,9 +11,12 @@
   <div class="links">
   </br>
     <form id="link1">
-      Link 1:
-      <input link="Web Link" type="text" size="40">
+      Link 1: </br>
+      <input link="link1" type="text" size="40">
     </form>
+  </br>
+    <button class="booton" onclick="link1()"> Submit</button>
   </div>
+  <script src="Linking.js"></script>
 </body>
 </html>
