--- a/Homepage.html
+++ b/Homepage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Styles/Homepage-style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Gugi" rel="stylesheet">
 
-    <title>Tabamio</title>
+    <title>Homepage</title>
   </head>
 
   <body>
