Added about page. Changed links for svg.

--- a/About/about.html
+++ b/About/about.html
@@ -17,8 +17,8 @@
     <img id ="pic3" src="Illustrator/IconStylize.png" alt="Icon" width="50">
     <img id ="pic4" src="Illustrator/IconStylize.png" alt="Icon" width="50">
 
-    <a href="https://www.animeshow.tv"><img id ="button1" src="Illustrator/Button.svg" width="400"></a>
-    <a href="https://www.youtube.com/trending"><img id ="button2" src="Illustrator/Button2.svg" width="400"></a>
-    <a href="https://www.facebook.com"><img id ="button3" src="Illustrator/Button3.svg" width="400"></a>
+    <a href="https://github.com/Amio-R"><img id ="button1" src="Illustrator/Button.svg" width="100"></a>
+    <a href="https://linkedin.com/in/amio-r"><img id ="button2" src="Illustrator/Button2.svg" width="100"></a>
+    <a href="Resume.pdf"><img id ="button3" src="Illustrator/Button3.svg" width="100"></a>
   </body>
 </html>
