--- a/About/about.html
+++ b/About/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 
-    <link rel="stylesheet" href="Styles/Homepage-style.css" type="text/css">
+    <link rel="stylesheet" href="Styles/about.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Gugi" rel="stylesheet">
 
     <title>Homepage</title>
