--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
   <div class="container">
     <div class="text-center"style="color:rgb(255,255,255,0.8);font-family:Verdana;font-size:6rem;">Welcome</div>
-    <button type="button" onclick="location.href='About/Homepage.html'" class="btn btn-primary btn-lg text-uppercase">Click Here</button>
+    <button type="button" onclick="location.href='About/about.html'" class="btn btn-primary btn-lg text-uppercase">Click Here</button>
   </div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
